css/common.css
body {
  padding-top: 60px;
  padding-bottom: 40px;
}

/* eliminates white space above navbar on mobile */
@media (max-width: 979px) {
  body {
    padding-top: 0;
  }
  
  .mobile-style {
    margin-bottom: 20px !important;
  }
}

.sidebar-nav {
  padding: 9px 9px;
}

